# figure_fitter_2D

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  circle_fit_example.cpp  figure_fitter.h  figures.h  fitter.h  point_fit_example.cpp
examples/: circle_fit_example.cpp  dummy.cpp  line_fit_example.cpp  point_fit_example.cpp  segment_fit_example.cpp
figures/: arc.h  circle.h  figure.h  line.h  point.h  segment.h  vec.h
figuresaa/: figure.h  line.h  point.h
fitters/: figure_fitter.h  fitter.h
